[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/win_scene_controls.gd" type="Script" id=1]
[ext_resource path="res://Sprites/cutscene_frame01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/cutscene_frame02.png" type="Texture" id=3]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/cutscene_frame03.png" type="Texture" id=5]
[ext_resource path="res://Sprites/cutscene_frame04.png" type="Texture" id=6]
[ext_resource path="res://Sprites/cutscene_frame05.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[node name="WinScene" type="Node2D"]

script = ExtResource( 1 )

[node name="Frame1" type="Node2D" parent="." index="0"]

[node name="Background" type="Sprite" parent="Frame1" index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Frame2" type="Node2D" parent="." index="1"]

visible = false

[node name="Background" type="Sprite" parent="Frame2" index="0"]

texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Label" type="Label" parent="Frame2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 110.0
margin_right = 256.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "I have driven back the invaders, but at a terrible cost to my people..."
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="Frame3" type="Node2D" parent="." index="2"]

visible = false

[node name="Background" type="Sprite" parent="Frame3" index="0"]

texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Label2" type="Label" parent="Frame3" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 256.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "I know they will not allow me to live..."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="Frame4" type="Node2D" parent="." index="3"]

visible = false

[node name="Background" type="Sprite" parent="Frame4" index="0"]

texture = ExtResource( 6 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Label3" type="Label" parent="Frame4" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 256.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "But I would do it all again, after all..."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="Frame5" type="Node2D" parent="." index="4"]

visible = false

[node name="Background" type="Sprite" parent="Frame5" index="0"]

texture = ExtResource( 7 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Label4" type="Label" parent="Frame5" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 120.0
margin_right = 256.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Sacrifices must be made!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="Camera2D" type="Camera2D" parent="." index="5"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false


